Ok this has to fix it - we use 'visibility' and changed the bg color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,8 +67,8 @@ p{
     position: absolute;
     pointer-events: none;
     white-space: pre-line;
-    background-color: rgb(0, 0, 0);
-    color: #ffffff;
+    background-color: rgb(255, 255, 255);
+    color: #000000;
     border-radius: 6px;
     padding: 9px 6px;;
 
